# Embedded-Systems

./: CMakeLists.txt  README.md  app.overlay  prj.conf
HC_SR04_Ultrasonic_Sensor_Code_HW3_saif_abdullah_zaki/: CMakeLists.txt  prj.conf
HC_SR04_Ultrasonic_Sensor_Code_HW3_saif_abdullah_zaki/inc/: IR.h  US.h  sensors.h
HC_SR04_Ultrasonic_Sensor_Code_HW3_saif_abdullah_zaki/src/: IR.c  US.c  main.c  sensors.c
drivers/hcsr04/: hcsr04.c  hcsr04.h
inc/: IR.h  US.h  algo.h  motors.h  sensors.h  uart.h
src/: IR.c  US.c  algo.c  main.c  motors.c  sensors.c  uart.c
